omni/tests/goldens/types/unknown_type_08.err
tests/goldens/types/unknown_type_08.omni:1:12: error: unknown type "Mystery8"
  let value8:Mystery8 = 1
             ^~~ hint: import or declare the type before use
tests/goldens/types/unknown_type_08.omni:1:1: error: cannot assign int to Mystery8
  let value8:Mystery8 = 1
  ^~~ hint: convert the expression to Mystery8 or change the variable type to int
