omni/tests/goldens/types/unknown_type_08.omni
let value8:Mystery8 = 1
